<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/PanelTheme.Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessage"
            style="@style/TextViewTheme.Message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_add" />

        <EditText
            android:id="@+id/etCost"
            style="@style/EditTextTheme"
            android:autofillHints="@string/image"
            android:hint="@string/cost"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etOrderCost"
            style="@style/EditTextTheme"
            android:autofillHints="@string/image"
            android:hint="@string/order_cost"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etDescription"
            style="@style/EditTextTheme"
            android:autofillHints="@string/image"
            android:hint="@string/description"
            android:inputType="textMultiLine|textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btSave"
                style="@style/ButtonTheme"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/save" />

            <Button
                android:id="@+id/btUpdate"
                style="@style/ButtonTheme"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/update"
                android:visibility="gone" />

            <Button
                android:id="@+id/btCancel"
                style="@style/ButtonTheme.Cancel"
                android:layout_weight="2"
                android:onClick="onClick"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>