<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextViewTheme"
            android:layout_weight="2"
            android:text="@string/cost" />

        <TextView
            style="@style/TextViewTheme"
            android:layout_weight="2"
            android:text="@string/order_cost" />

        <TextView
            style="@style/TextViewTheme"
            android:layout_weight="1"
            android:text="@string/description" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

</LinearLayout>