<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        style="@style/PanelTheme.Form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewTheme.Title.Primary.H1"
            android:text="@string/title_order_active" />

        <TextView
            android:id="@+id/tvCost"
            style="@style/TextViewTheme.Text.Black.h5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:text="@string/cost" />

        <Button
            style="@style/ButtonTheme.Cancel"
            android:layout_below="@id/tvCost"
            android:text="@string/finish" />

    </RelativeLayout>

</RelativeLayout>